CPU cores
+ (1053) Added FXMEMALIGNED() for asking compiler to align variable data
+ (1054) Replaced Maths::Array with a SIMD optimised Maths::Vector plus
added new vector benchmark & test
+ (1055) Replaced Maths::FRandomness with a version written using the new
Maths::Vector code
+ (1059) Rewritten FXFSMonitor to use inotify on Linux instead of FAM

v0.87 11th July 2007:
-=-=-=-=-=-=-=-=-=-=-
B Fixed deadlock in FXFSMonitor
B FXINLINE_MUTEX_IMPLEMENTATION was broken
B Fixed critical section nedmalloc miscompile
B nedmalloc wasn't locking mspace if all mspaces were locked
B FXApp was failing on init when trying to list fonts when Xft wasn't
enabled
B Fixed daylight saving time problems in FXTime
B Fixed win32 stack backtracing in FXException which hadn't been working
reliably since we moved to MSVC7.1
B TnFXSQLDB_sqlite3 was adding one to the month of any dates read in
B FXFont wasn't degrading gracefully to alternative fonts if a font wasn't
available
B Due to changes in newer GCC's, fxassemblerops was not compiling i386
assembler implementations
B Fixed segfault in FXFSMonitor on process exit due to unremoved paths
B Moved FXException data into private structure to work around MSVC stack
over-allocation bug
B QSSLDevice wasn't 64 bit compatible and threw random errors :(
B FXFSMonitor was hanging on process exit on POSIX due to FAM/gamin
B FXNetwork::dnsReverseLookup was failing on Apple MacOS X
B Thread cancellation wasn't invoking cleanup handlers on Linux

* Removed many unnecessary fetches of per-thread data (slow on POSIX) in
FXException
* Made FXProcess::mappedFiles() cached
* Fixed up memory locking code to lock per VirtualAlloc region
* Disabled signals to threads (without it, gprof won't run)
* Merged FOX v1.6.4
+ Added kqueue implementation to FXFSMonitor
+ Ported TnFOX to Apple MacOS X (Intel only)
* Merged FOX v1.6.6
* Substantially improved python bindings
+ Made FXAtomicInt, and therefore TnFOX, portable to all GCC supported
architectures